--- a/style.css
+++ b/style.css
@@ -136,22 +136,65 @@ nav{
   padding: 10px 35px;
 }
 
-@media (min-width: 768px){
+@media (min-widht: 420px){
+  .logo{
+    width: 90px;
+    height: 80px;
+  }
+
+  h1{
+    font-size: 22px;
+  }
+}
+
+@media (min-width: 769px){
   button, .menu-box{
     display:none;
   }
-  nav, .menu{
+
+  header{
+    display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    padding:25px;
   }
+
+  .new-header{
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+  }
+
+   #menu{
+    display: flex;
+    align-items: center;
+    gap:30px;
+  }
+
+  .menu {
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .menu li:last-child {
+    margin-bottom: 50px;
+  }
+
+  .nav-box{
+    margin-top: 38px;
+  }
+
+  h1{
+    font-size: 24px;
+  }
+  
   .logo{
     margin: 0;
   }
 
-  .menu{
-    gap:30px;
-  }
-  .menu a{
-    font-size: 18px;
+  #menu a{
+    font-size: 20px;
     padding: 10px 8px;
   }
 
@@ -159,4 +202,18 @@ nav{
    padding: 10px 20px;
    font-size: 14px;
 }
+}
+
+@media (min-width: 1280px){
+  .new-header{
+    width: 85%;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1440px){
+  .new-header{
+    width: 1440px;
+    margin: 0 auto;
+  }
 }
